# batchalign3

./: .gitignore  CITATION.cff  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  mypy.ini  openapi.json  pyproject.toml  pytest.ini  ty.toml
apps/dashboard-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/dashboard-desktop/src-tauri/capabilities/: default.json
apps/dashboard-desktop/src-tauri/src/: config.rs  main.rs  protocol.rs  server.rs
crates/batchalign-app/: CLAUDE.md  Cargo.toml
crates/batchalign-app/src/: benchmark.rs  compare.rs  coref.rs  debug_artifacts.rs  direct.rs  error.rs  host_memory.rs  host_policy.rs  infer_retry.rs  lib.rs  media.rs  provenance.rs  queue.rs  runtime_supervisor.rs  server.rs  server_backend.rs  stanza_registry.rs  state.rs  submission.rs  temporal_backend.rs  transcribe.rs  translate.rs  utseg.rs  websocket.rs  ws.rs
crates/batchalign-app/src/cache/: mod.rs  noop.rs
crates/batchalign-app/src/commands/: align.rs  avqi.rs  benchmark.rs  catalog.rs  compare.rs  coref.rs  kernel.rs  mod.rs  morphotag.rs  opensmile.rs  spec.rs  transcribe.rs  translate.rs  utseg.rs
crates/batchalign-app/src/db/: insert.rs  mod.rs  query.rs  recovery.rs  schema.rs
crates/batchalign-app/src/fa/: incremental.rs  mod.rs  transport.rs
crates/batchalign-app/src/morphosyntax/: batch.rs  mod.rs  worker.rs
crates/batchalign-app/src/pipeline/: mod.rs  morphosyntax.rs  plan.rs  text_infer.rs  transcribe.rs
crates/batchalign-app/src/recipe_runner/: catalog.rs  runtime.rs
crates/batchalign-app/src/revai/: asr.rs  mod.rs  preflight.rs  utr.rs
crates/batchalign-app/src/routes/: bug_reports.rs  dashboard.rs  health.rs  media_list.rs  mod.rs  traces.rs
crates/batchalign-app/src/runner/: debug_dumper.rs  mod.rs  policy.rs  tests.rs
crates/batchalign-app/src/store/: job.rs  mod.rs  registry.rs
crates/batchalign-app/src/transcribe/: asr_output.rs  infer.rs  mod.rs  types.rs
crates/batchalign-app/src/types/: api.rs  config.rs  domain.rs  engines.rs  macros.rs  mod.rs  options.rs  params.rs  request.rs  response.rs  results.rs  runtime.rs  scheduling.rs  status.rs  traces.rs  worker.rs  worker_v2.rs
crates/batchalign-app/src/worker/: artifacts_v2.rs  asr_request_v2.rs  asr_result_v2.rs  error.rs  fa_result_v2.rs  handle.rs  memory_guard.rs  mod.rs  registry.rs  request_builder_v2.rs  speaker_request_v2.rs  speaker_result_v2.rs  target.rs  tcp_handle.rs  text_request_v2.rs
crates/batchalign-app/src/workflow/: benchmark.rs  compare.rs  fa.rs  mod.rs  morphosyntax.rs  registry.rs  text_batch.rs  traits.rs  transcribe.rs
crates/batchalign-app/tests/: golden.rs  gpu_concurrent_dispatch.rs  integration.rs  json_compat.rs  live_server_fixture.rs  ml_golden.rs  worker_integration.rs  worker_protocol_matrix.rs  worker_protocol_v2_compat.rs  worker_v2_fa_roundtrip.rs  workflow_helpers.rs
crates/batchalign-app/tests/common/: mod.rs
crates/batchalign-app/tests/ml_golden/: compare_master_parity.rs  direct_mode_verification.rs  error_paths.rs  golden.rs  golden_audio.rs  golden_parity.rs  live_server_fixture.rs  option_receipt.rs  profile_verification.rs
crates/batchalign-app/tests/snapshots/: golden__compare_eng.snap  golden__morphotag_eng_multi_utt.snap  golden__morphotag_eng_simple.snap  golden__utseg_eng_multi_utt.snap  json_compat__health_response.snap  json_compat__job_info.snap  json_compat__job_submission_minimal.snap  json_compat__job_submission_paths_mode.snap  json_compat__job_submission_with_files.snap  json_compat__server_config_default.snap  json_compat__server_config_default.snap.new  json_compat__server_config_full.snap  json_compat__server_config_full.snap.new
crates/batchalign-chat-ops/: CLAUDE.md  Cargo.toml
crates/batchalign-chat-ops/data/: names.json  num2lang.json
crates/batchalign-chat-ops/proptest-regressions/: dp_align.txt
crates/batchalign-chat-ops/proptest-regressions/asr_postprocess/: num2text.txt
crates/batchalign-chat-ops/src/: build_chat.rs  cache_key.rs  compare.rs  constituency.rs  coref.rs  extract.rs  indices.rs  inject.rs  lib.rs  merge_abbrev.rs  parse.rs  serialize.rs  speaker.rs  text_types.rs  translate.rs  utseg.rs  validate.rs  wer_conform.rs
crates/batchalign-chat-ops/src/asr_postprocess/: asr_types.rs  cantonese.rs  cleanup.rs  compounds.rs  lang_detect.rs  mod.rs  num2text.rs
crates/batchalign-chat-ops/src/compare/: gold_projection.rs  mod.rs
crates/batchalign-chat-ops/src/diff/: classify.rs  mod.rs  preserve.rs  types.rs
crates/batchalign-chat-ops/src/dp_align/: mod.rs  tests.rs
crates/batchalign-cli/: CLAUDE.md  Cargo.toml
crates/batchalign-cli/src/: bench_cmd.rs  cache_cmd.rs  client.rs  daemon.rs  doctor_cmd.rs  error.rs  ipc_schema.rs  jobs_cmd.rs  lib.rs  logs_cmd.rs  main.rs  models_cmd.rs  output.rs  progress.rs  python.rs  replay_cmd.rs  resolve.rs  self_exe.rs  serve_cmd.rs  setup_cmd.rs  worker_cmd.rs
crates/batchalign-cli/tests/: ci_checks.rs  cli.rs  command_matrix.rs  command_surface_manifest.rs  commands.rs  compat_contracts.rs  daemon_e2e.rs  e2e.rs  wide_struct_audit.rs
crates/batchalign-revai/: Cargo.toml
crates/batchalign-revai/src/: client.rs  lib.rs  types.rs
crates/batchalign-types/: Cargo.toml
crates/batchalign-types/src/: domain.rs  lib.rs  macros.rs  paths.rs  scheduling.rs  worker.rs  worker_v2.rs
pyo3/: CLAUDE.md  Cargo.toml
pyo3/src/: build.rs  cleanup_ops.rs  cli_entry.rs  dp_align.rs  extract.rs  fa_ops.rs  forced_alignment.rs  hk_asr_bridge.rs  inject.rs  lib.rs  metadata.rs  morphosyntax_ops.rs  parse.rs  provider_pipeline.rs  py_json_bridge.rs  pyfunctions.rs  pytypes.rs  retokenize.rs  speaker_ops.rs  test_helpers.rs  text_ops.rs  tier_ops.rs  utterance_segmentation.rs  worker_artifacts.rs  worker_asr_exec.rs  worker_fa_exec.rs  worker_media_exec.rs  worker_protocol.rs  worker_text_results.rs
pyo3/src/nlp/: mod.rs
pyo3/src/parsed_chat/: cleanup.rs  fa.rs  mod.rs  morphosyntax.rs  speakers.rs  structure.rs  text.rs
pyo3/src/revai/: mod.rs  pybridge.rs
pyo3/src/tests/: mod.rs
tests/plugins/cantotag_plugin/: pyproject.toml
(+813 files in other folders)
