[package]
name = "batchalign-pyo3"
version = "0.1.0"
edition = "2024"
authors = ["Franklin Chen <franklinchen@franklinchen.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/TalkBank/batchalign3"
description = "Rust worker runtime for batchalign3"
publish = false

[lib]
name = "batchalign_core"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
cli-entry = ["dep:batchalign-cli"]
revai-bridge = ["dep:batchalign-revai"]

[dependencies]
numpy = "0.28"
pyo3 = { version = "0.28" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shared batchalign crates
batchalign-types = { path = "../crates/batchalign-types" }
batchalign-chat-ops = { path = "../crates/batchalign-chat-ops" }
batchalign-revai = { path = "../crates/batchalign-revai", optional = true }
batchalign-cli = { path = "../crates/batchalign-cli", optional = true, default-features = false }

[profile.dev]
split-debuginfo = "unpacked"
debug = "line-tables-only"          # Less debug info -> faster linking

[profile.dev.package."*"]
opt-level = 1                       # Optimize third-party deps (one-time cost)

[profile.test]
split-debuginfo = "unpacked"
debug = "line-tables-only"
