[package]
name = "batchalign-chat-ops"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared CHAT manipulation functions for batchalign (extract, inject, cache, parse, serialize)"
publish = false

[dependencies]
aho-corasick = "1.1"
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
smallvec = { version = "1.15", features = ["serde", "union", "const_generics"] }
thiserror = { workspace = true }
tracing = { workspace = true }
zhconv = "0.4.1"

# TalkBank crates — path deps to talkbank-tools
talkbank-direct-parser = { path = "../../../talkbank-tools/crates/talkbank-direct-parser" }
talkbank-model = { path = "../../../talkbank-tools/crates/talkbank-model" }
talkbank-parser = { path = "../../../talkbank-tools/crates/talkbank-parser" }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
