[package]
name = "batchalign-cli"
version = "1.0.0"
description = "clap CLI, dispatch router, daemon lifecycle"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "batchalign3"
path = "src/main.rs"

[features]
default = ["embed-dashboard"]
embed-dashboard = ["batchalign-app/embed-dashboard"]

[dependencies]
batchalign-app = { workspace = true }
batchalign-chat-ops = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }
fs2 = { workspace = true }
libc = { workspace = true }
zip = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
batchalign-app = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
toml = { workspace = true }
