[package]
name = "batchalign-cli"
version = "1.0.0"
description = "clap CLI, dispatch router, daemon lifecycle"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["binary-entry", "embed-dashboard"]
binary-entry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
embed-dashboard = ["batchalign-app/embed-dashboard"]

[[bin]]
name = "batchalign3"
path = "src/main.rs"
required-features = ["binary-entry"]

[dependencies]
batchalign-app = { workspace = true }
batchalign-chat-ops = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }
fs2 = { workspace = true }
libc = { workspace = true }
zip = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
batchalign-app = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
toml = { workspace = true }
rstest = { workspace = true }
